[package]
name = "sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.42"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
uuid = "1.4.0"
tokio = { version = "1.21", features = ["macros", "time"] }
tokio-util = { version = "0.6", features = ["compat"] }
thiserror = "1.0.43"
